showing heat map

--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -1,7 +1,12 @@
 $icon-font-path: "../fonts/";
 
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap";
+@import "heatMap";
 
+
+.app-bar {
+    background-color: transparent !important;
+}
 
 .default-svg-container {
     position: relative;
